--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -16,6 +16,9 @@ body {
 	font-family: 'Open Sans';
 	font-weight: 300;
 	font-size: 15px;
+
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 .top-navigation {
@@ -55,7 +58,7 @@ body {
 	padding: 30px;
 	text-align: center;
 	width: 20vw;
-	height: 90vh;
+	height: 100vh;
 
 	box-shadow: 2px 2px 5px #000;
 	z-index: 0;
@@ -89,7 +92,20 @@ body {
 .container {
 	display: inline-block;
 	padding: 30px;
-	height: 90vh;
+	max-height: 85vh;
+	overflow-y: auto;
+}
+.container::-webkit-scrollbar {
+	width: 20px;
+}
+.container::-webkit-scrollbar-track {
+	background: rgba(0,0,0,.4);
+}
+.container::-webkit-scrollbar-thumb {
+	background: rgba(85, 85, 85,.4);
+}
+.container::-webkit-scrollbar-thumb:hover {
+	background: rgba(60, 60, 60,.4);
 }
 
 /* qs = quick search */
@@ -111,6 +127,35 @@ body {
 	float:right;
 	display: inline;
 	color: rgba(85,85,85,1);
+}
+
+/* job stuff */
+.job-header {
+	font-size: 14px;
+	color: rgba(85, 85, 85, 1);
+	text-align: center;
+
+	background: rgba(53, 53, 53, 0);
+	padding: 5px;
+	margin: 2px;
+}
+.job-section {
+	background: rgba(53, 53, 53, .56);
+	padding: 10px;
+	margin: 2px;
+	margin-bottom: 5px;
+	font-size: 14px;
+}
+.job-section:hover {
+	background: rgba(69,69,69, .56);
+	cursor: pointer;
+}
+.job-center {
+	text-align: center;
+}
+.job-complete {
+	text-align: center;
+	font-size: 20px;
 }
 
 @media (max-width: 1600px) {
