--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -120,7 +120,7 @@ body {
 	border: 0px;
 	resize: none;
 	width: 100%;
-	height: 80%;
+	height: 70%;
 	padding: 10px;
 }
 .container textarea::-webkit-scrollbar {
@@ -192,7 +192,12 @@ body {
 	font-size: 12px;
 	margin: 10px;
 }
-
+.note-text {
+	font-weight: 700;
+	color: rgba(255,255,255,1);
+	font-size: 16px;
+	margin: 10px;
+}
 .custom-btn {
     padding: 10px 20px 10px 20px;
     display: inline-block;  
