--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -61,7 +61,7 @@ body {
 	height: 100vh;
 
 	box-shadow: 2px 2px 5px #000;
-	z-index: 0;
+	z-index: 1;
 }
 .side-container input {
 	background: rgba(21, 21, 21, .48);
@@ -97,7 +97,6 @@ body {
 }
 .container {
 	display: inline-block;
-	padding: 30px;
 	max-height: 85vh;
 	overflow-y: auto;
 }
@@ -134,6 +133,21 @@ body {
 }
 .container textarea::-webkit-scrollbar-thumb:hover {
 	background: rgba(60, 60, 60,.4);
+}
+.content-container {
+	padding: 30px;
+}
+.new-item-container {
+	width: 100%;
+	padding: 15px;
+	background: rgba(45, 45, 45, 1);
+	z-index: 0;
+	display:none;
+}
+.new-item-container h3 {
+	font-weight: 700;
+	margin: 10px 5px 10px 5px;
+	font-size: 18px;
 }
 
 /* qs = quick search */
