--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -148,6 +148,45 @@ body {
 	font-weight: 700;
 	margin: 10px 5px 10px 5px;
 	font-size: 18px;
+	text-align: center;
+}
+.new-item-container input {
+	background: rgba(60, 60, 60, .5);
+	border: 1px solid rgba(30, 30, 30, 1);
+
+	font-size: 14px;
+	color: rgba(255,255,255,1);
+
+	width: 80%;
+	padding: 5px 10px 5px 10px;
+	margin-left: 10px;
+}
+
+/* upload resume */
+.new-item-container .upload-btn {
+	display: inline-block;
+	margin-top: 10px;
+	padding: 15px 30px;
+
+	border: 1px solid rgba(30, 30, 30, 1);
+	background: rgba(60, 60, 60, .5);
+	color: rgba(255, 255, 255, .5);
+
+	width: 200px;
+	text-align: center;
+}
+.new-item-container .upload-btn:hover {
+	background: rgba(80, 80, 80, .5);
+	color: rgba(255, 255, 255, .5);
+	cursor: pointer;
+}
+.new-item-container .upload-btn i {
+	margin-right: 10px;
+}
+
+.new-item-container .upload-success {
+	background: rgba(0, 155, 0, 1);
+	color: rgba(255, 255, 255, 1);
 }
 
 /* qs = quick search */
