--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -289,10 +289,13 @@ body {
 }
 .custom-btn {
     padding: 10px 20px 10px 20px;
-    display: inline-block;  
+    display: inline-block;
+
     text-align: center;
     font-weight: bold;
     color: rgba(255, 255, 255, 1);
+    border: 0px;
+    
     text-transform: uppercase;
     margin: 5px;
 }
