--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -165,27 +165,27 @@ body {
 }
 
 /* upload resume */
-.new-item-container .upload-btn {
+.upload-btn {
 	display: inline-block;
 	position: relative;
 
 	border: 1px solid rgba(30, 30, 30, 1);
 	color: rgba(255, 255, 255, .5);
 
-	width: 80px;
+	
 	text-align: center;
 }
-.new-item-container .upload-btn:hover {
+.upload-btn:hover {
 	color: rgba(255, 255, 255, .5);
 }
-.new-item-container .upload-btn button {
+.upload-btn button {
 	border: 0px;
 	background: rgba(0,0,0,0);
 	color: rgba(255, 255, 255, 1);
 	margin: 0 auto;
 	padding: 10px;
 }
-.new-item-container .upload-btn input[type="file"] {
+.upload-btn input[type="file"] {
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -194,17 +194,19 @@ body {
 	width: 100%;
 }
 
-.new-item-container .upload-btn i {
+.upload-btn i {
 	display: block;
 }
 
-.new-item-container .upload-success {
+
+
+.upload-success {
 	position: relative;
 	display: inline-block;
 	color: rgba(255, 255, 255, 1);
 	padding: 10px;
 }
-.new-item-container .upload-success:hover {
+.upload-success:hover {
 	background: rgba(0, 155, 0, 1);
 	color: rgba(255, 255, 255, 1);
 	padding: 10px;
